Реализовал каскадное удаление сервисам
