# api-gateway/internal/api/controller/posts/delete_post_controller.go
@@ -1,9 +1,11 @@
 package controller
 
 import (
+	"fmt"
 	"net/http"
 
 	"api-grpc-gateway/config"
+	"api-grpc-gateway/internal/clients/likes"
 	"api-grpc-gateway/internal/clients/posts"
 	schemas "api-grpc-gateway/internal/schemas/posts"
 
@@ -13,6 +15,7 @@ import (
 
 type DeletePostController struct {
 	GRPCClientPosts *posts.GRPCClientPosts
+	GRPCClientLikes *likes.GRPCClientLikes
 	Env             *config.Config
 }
 
@@ -30,13 +33,18 @@ func (dpc *DeletePostController) Delete(ctx *gin.Context) {
 	postID := ctx.Param("post_id")
 	authorID := ctx.GetString("x-user-id")
 
-	_, err := dpc.GRPCClientPosts.GetPostByID(ctx, uuid.MustParse(postID))
+	_, err := dpc.GRPCClientPosts.GetPostByIDAuthorID(ctx, uuid.MustParse(postID), uuid.MustParse(authorID))
 	if err != nil {
-		ctx.JSON(http.StatusNotFound, schemas.ErrorResponse{Message: "Post не найден"})
+		ctx.JSON(http.StatusNotFound, schemas.ErrorResponse{Message: fmt.Sprintf("Post не найден или вы не являетесь автором поста %v", err)})
 		return
 	}
 
 	if _, err = dpc.GRPCClientPosts.DeletePost(ctx, uuid.MustParse(postID), uuid.MustParse(authorID)); err != nil {
+		ctx.JSON(http.StatusInternalServerError, schemas.ErrorResponse{Message: "Internal Server error"})
+		return
+	}
+
+	if _, err = dpc.GRPCClientLikes.DeleteReactionsByPost(ctx, uuid.MustParse(postID)); err != nil {
 		ctx.JSON(http.StatusInternalServerError, schemas.ErrorResponse{Message: "Internal Server error"})
 		return
 	}
